tests/errors/return_outside_function.orus
return 42

fn main() {}

